@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020-2024 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2020-2025 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.notification;
@@ -26,15 +26,12 @@ import io.airbyte.notification.messages.SourceInfo;
 import io.airbyte.notification.messages.SyncSummary;
 import io.airbyte.notification.messages.WorkspaceInfo;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.InetSocketAddress;
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -278,6 +275,36 @@ class SlackNotificationClientTest {
   }
 
   @Test
+  void testNotifySchemaDiffToApplyWhenPropagationDisabled() {
+    final UUID connectionId = UUID.randomUUID();
+    final UUID sourceId = UUID.randomUUID();
+    final CatalogDiff diff = new CatalogDiff();
+    final String workspaceName = "";
+    final String workspaceUrl = "http://airbyte.io/workspaces/123";
+    final String connectionName = "PSQL ->> BigQuery";
+    final String sourceName = "";
+    final String sourceUrl = "http://airbyte.io/workspaces/123/source/456";
+    final boolean isBreaking = false;
+    final String connectionUrl = "http://airbyte.io/your_connection";
+    final String recipient = "";
+
+    final String expectedNotificationMessage = "Airbyte detected schema changes for '<http://airbyte.io/your_connection|PSQL -&gt;&gt; BigQuery>'.";
+    server.createContext(TEST_PATH, new ServerHandler(expectedNotificationMessage));
+    final SlackNotificationClient client =
+        new SlackNotificationClient(new SlackNotificationConfiguration().withWebhook(WEBHOOK_URL + server.getAddress().getPort() + TEST_PATH));
+
+    final UUID workpaceId = UUID.randomUUID();
+    final SchemaUpdateNotification notification = new SchemaUpdateNotification(
+        new WorkspaceInfo(workpaceId, workspaceName, workspaceUrl),
+        new ConnectionInfo(connectionId, connectionName, connectionUrl),
+        new SourceInfo(sourceId, sourceName, sourceUrl),
+        isBreaking,
+        diff);
+
+    assertTrue(client.notifySchemaDiffToApplyWhenPropagationDisabled(notification, recipient));
+  }
+
+  @Test
   void buildSummaryNewStreamTest() {
     final CatalogDiff diff = new CatalogDiff();
     diff.addTransformsItem(new StreamTransform().transformType(StreamTransform.TransformTypeEnum.ADD_STREAM)
@@ -440,8 +467,7 @@ class SlackNotificationClientTest {
 
     @Override
     public void handle(final HttpExchange t) throws IOException {
-      final InputStream is = t.getRequestBody();
-      final String body = IOUtils.toString(is, Charset.defaultCharset());
+      final String body = new String(t.getRequestBody().readAllBytes());
       LOGGER.info("Received: '{}'", body);
       JsonNode message = null;
       try {
